[package]
name = "the_rust_programming_language"
version = "0.1.0"
authors = ["Agent47 <654136828@qq.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
syn = "1.0"
quote = "1.0"
hello_macro = { path = "./derive_macro" }
hello_macro_derive = { path = "./derive_macro/hello_macro_derive" }
proc_marco = { path = "./proc_marco" }
threadPool = { path = "./threadPool" }
adder = "0.1.0"
glob = "^0.3.1"
regex = "^1.11.1"

[workspace]
members = [
    "adder",
    "add-one",
    "derive_macro",
    "attribute_macro",
    "proc_marco",
    "threadPool",
    "av"
]